<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculatrice de Binetou</string>
    <string name="action_settings">Settings</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="zero">0</string>
    <string name="poin">.</string>
    <string name="egal">=</string>
    <string name="divis">/</string>
    <string name="add">+</string>
    <string name="soust">-</string>
    <string name="mult">*</string>
    <string name="effac">BackSpace</string>
    <string name="reinit">Clear</string>
    <string name="result">0</string>

    
    
        

</resources>
